--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <meta property="og:title" content="멋쟁이사자">
     <meta property="og:description" content="멋쟁이사자와 함께 즐겁게 코딩">
-    <meta property="og:image" content="./슬라이드1.png">
+    <meta property="og:image" content="./slide.png">
     <!-- "카톡 링크올릴때 이미지 나오는거" -->
     <!-- "og 태그" -->
 </head>
@@ -66,3 +66,7 @@
 </body>
 
 </html>
+<!-- 순서: -->
+<!-- git add . < 모두 추가-->
+<!-- git commit -m "이름" -->
+<!-- git push -u origin main -->
