--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <meta property="og:title" content="멋쟁이사자">
     <meta property="og:description" content="멋쟁이사자와 함께 즐겁게 코딩">
-    <meta property="og:image" content="./slide.png">
+    <meta property="og:image" content="./1.png">
     <!-- "카톡 링크올릴때 이미지 나오는거" -->
     <!-- "og 태그" -->
 </head>
