--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
     <meta property="og:title" content="멋쟁이사자">
     <meta property="og:description" content="멋쟁이사자와 함께 즐겁게 코딩">
     <meta property="og:image" content="./1.png">
     <!-- "카톡 링크올릴때 이미지 나오는거" -->
     <!-- "og 태그" -->
+
+    <link rel="stylesheet" href="./style3.css">
 </head>
 
 <body>
