--- a/css_test.html
+++ b/css_test.html
@@ -8,6 +8,23 @@
     <link rel="stylesheet" href="./style2.css">
 </head>
 <body>
+    <header class="redblue">
+        <div class="pink"> </div>
+        <div class="blue"> </div>
+    </header>
+    <section>
+        <p>Elon Reeve Musk FRS (/ˈiːlɒn/ EE-lon; born June 28, 1971) 
+            is a business magnate and investor. He is the founder, 
+            CEO and chief engineer of SpaceX; angel investor, C
+            EO and product architect of Tesla, Inc.; owner and CEO of 
+            Twitter; founder of the Boring Company; co-founder of Neuralink 
+            and OpenAI; and president of the philanthropic Musk Foundation.
+             With an estimated net worth of around $192 billion as of March 27, 2023, 
+             primarily from his ownership stakes in Tesla and SpaceX,[4][5] 
+             Musk is the second-wealthiest person in the world, according 
+             to both the Bloomberg Billionaires Index and Forbes's real-time 
+             billionaires list.</p>
+    </section>
     <div class="html">
         <h1>멋쟁이 사자처럼</h1>
     </div>
@@ -26,6 +43,7 @@
         <!-- <p>안녕하세요</p> -->
         <img src="slide1.png" width="200">
     </div>
+    <br>
     
 </body>
 </html>
